Fixed start command on render to deploy bakend

--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
 
   <script>
     // Replace YOUR_SERVER_IP with your backend server's IP or domain
-    const socket = new WebSocket("ws://YOUR_SERVER_IP:8080");
+    const socket = new WebSocket("https://remote-mouse-sg9d.onrender.com");
     const area = document.getElementById("area");
     const input = document.getElementById("keypress");
 
